@@ -1,3 +1,6 @@
+[B]5.0.3[/B]
+- changed: made imdb uniqueid default when available
+
 [B]5.0.2[/B]
 - changed: made tmdb uniqueid consistent with documentation
 
